test_regress/t/t_past_unsup_bad.out
%Error-UNSUPPORTED: t/t_past_unsup_bad.v:13:11: Unsupported: $past expr2 and clock arguments
   13 |       if ($past(d, 0, 0)) $stop;
      |           ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_past_unsup_bad.v:14:11: Unsupported: $past expr2 and clock arguments
   14 |       if ($past(d, 0, 0, clk)) $stop;
      |           ^~~~~
%Error-UNSUPPORTED: t/t_past_unsup_bad.v:15:11: Unsupported: $fell and clock arguments
   15 |       if ($fell(d, clk)) $stop;
      |           ^~~~~
%Error-UNSUPPORTED: t/t_past_unsup_bad.v:16:11: Unsupported: $rose and clock arguments
   16 |       if ($rose(d, clk)) $stop;
      |           ^~~~~
%Error-UNSUPPORTED: t/t_past_unsup_bad.v:17:11: Unsupported: $stable and clock arguments
   17 |       if ($stable(d, clk)) $stop;
      |           ^~~~~~~
%Error-UNSUPPORTED: t/t_past_unsup_bad.v:18:11: Unsupported: $changed and clock arguments
   18 |       if ($changed(d, clk)) $stop;
      |           ^~~~~~~~
%Error: Exiting due to
